tests/unit/Core/Errors/Directory.Build.props
<Project>

    <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />

    <PropertyGroup>
        <RootNamespace>Paraminter.Semantic.Attributes.Constructor.Oneiroi.Errors</RootNamespace>
    </PropertyGroup>
    
</Project>